HW_2/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
spec:
  type: NodePort
  selector:
    app: multi-container-app
  ports:
    - name: nginx-http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
